# chama-optics

./: .gitignore  .reuseignore  .typos.toml  Cargo.toml  README.md  build.rs  build_deps_ubuntu.sh  build_mac.sh  check.sh  codesign_mac.sh  flake.nix  rust-toolchain
.github/workflows/: pages.yml  rust.yml  typos.yml
LICENSES/: LicenseRef-BitstreamVeraFonts.txt  LicenseRef-Non-AI-CC-BY-NC.txt  LicenseRef-Non-AI-MIT.txt  LicenseRef-NotoSans-Copyright.txt
assets/: chama-optics-x256.ico.license
assets/fonts/: D2Coding-Ver1.3.2-20180524-all.ttc.license  DejaVuSansMono.ttf.license  NotoSansKR-Medium.ttf.license
locales/: app.yml  export_config.yml  import_config.yml  language.yml  output_format.yml  scale_config.yml  theme.yml
src/: app.rs  builtin_fonts.rs  exif_impl.rs  export_config.rs  fonts.rs  image_frame.rs  import_config.rs  langs.rs  lib.rs  main.rs  orientation.rs  output_format.rs  packed_image.rs  scale_config.rs
src/export_config/: mod.rs  output_format.rs  output_name.rs  scale_config.rs
src/fonts/: builtin_fonts.rs  mod.rs
src/heic/: mod.rs  native.rs  web.rs
src/image/: mod.rs  packed_image.rs
src/theme/: film.rs  mod.rs  nothing.rs
